# Bathbot

./: .env.example  .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  config.example.toml  docker-compose.yml  index.html  logconfig.toml  rustfmt.toml  sqlx-data.json  tracking  wrapper.h
bathbot/: Cargo.toml
bathbot-cache/: Cargo.toml
bathbot-cache/src/: cache.rs  config.rs  data.rs  key.rs  lib.rs  util.rs  value.rs
bathbot-cache/src/bathbot/: github_pull_requests.rs  guild_shards.rs  map_diffs.rs  miss_analyzer.rs  mod.rs
bathbot-cache/src/cache/: cold_resume.rs  delete.rs  fetch.rs  mod.rs  store.rs
bathbot-cache/src/huismetbenen/: mod.rs  snipe_countries.rs
bathbot-cache/src/key/: into_key.rs  mod.rs  set.rs  single.rs  to_key.rs
bathbot-cache/src/model/: archive.rs  connection.rs  guild.rs  member.rs  mod.rs  stats.rs
bathbot-cache/src/osekai/: badges.rs  medals.rs  mod.rs  ranking.rs
bathbot-cache/src/osu/: mod.rs  pp_ranking.rs  user.rs
bathbot-cache/src/osu_world/: country_regions.rs  mod.rs
bathbot-cache/src/osustats/: best.rs  mod.rs
bathbot-cache/src/serializer/: mod.rs  multi.rs  single.rs
bathbot-cache/src/twilight/: channel.rs  current_user.rs  guild.rs  member.rs  mod.rs  permission_overwrite.rs  role.rs  user.rs
bathbot-cache/src/util/: aligned_vec.rs  mod.rs  serialize.rs  zipped.rs
bathbot-cards/: Cargo.toml
bathbot-cards/src/: card.rs  error.rs  font.rs  lib.rs  svg.rs
bathbot-cards/src/builder/: font.rs  mod.rs  paint.rs
bathbot-cards/src/skills/: description.rs  mod.rs  prefix.rs  suffix.rs  title.rs
bathbot-client/: Cargo.toml
bathbot-client/src/: client.rs  discord.rs  error.rs  github.rs  huismetbenen.rs  lib.rs  metrics.rs  miss_analyzer.rs  multipart.rs  osekai.rs  osu.rs  osustats.rs  osutrack.rs  osutracker.rs  osuworld.rs  relax.rs  respektive.rs  site.rs  twitch.rs
bathbot-client/src/snipe/: huismetbenen.rs  kittenroleplay.rs  mod.rs
bathbot-model/: Cargo.toml
bathbot-model/src/: command_fields.rs  country_code.rs  deser.rs  either.rs  games.rs  github.rs  huismetbenen.rs  kittenroleplay.rs  lib.rs  map_leaderboard.rs  osekai.rs  osu.rs  osu_stats.rs  osu_tracker.rs  osu_world.rs  osutrack.rs  personal_best.rs  ranking_entries.rs  relax.rs  respektive.rs  rkyv_impls.rs  score_slim.rs  twitch.rs  user_stats.rs
bathbot-model/src/embed_builder/: mod.rs  settings.rs  value.rs
bathbot-model/src/rkyv_util/: as_non_zero.rs  bitflags.rs  deref_as_box.rs  deref_as_string.rs  map_boxed_slice.rs  map_unwrap_or_default.rs  mod.rs  niche_deref_as_box.rs  slice_as_vec.rs  str_as_string.rs  time.rs  unwrap_or_default.rs
bathbot-model/src/rosu_v2/: grade.rs  mod.rs  mode.rs  mods.rs  multiplayer.rs  ranking.rs  user.rs
bathbot-model/src/twilight/: image_hash.rs  mod.rs  session.rs
bathbot-model/src/twilight_gateway/: mod.rs  session.rs
bathbot-model/src/twilight_model/: mod.rs
bathbot-psql/: Cargo.toml  sqlx-data.json
bathbot-psql/migrations/: 20221102221131_base.down.sql  20221102221131_base.up.sql  20230201231043_inc-version-len.down.sql  20230201231043_inc-version-len.up.sql  20230212055648_remove_map_max_combo.down.sql  20230212055648_remove_map_max_combo.up.sql  20230504191905_remove_countries.down.sql  20230504191905_remove_countries.up.sql  20230531141825_add_bookmarks_table.down.sql  20230531141825_add_bookmarks_table.up.sql  20230613122212_add_render_support.down.sql  20230613122212_add_render_support.up.sql  20230613122212_add_replays_table.down.sql  20230613122212_add_replays_table.up.sql  20230708224944_adjust_user_config_skin_color.down.sql  20230708224944_adjust_user_config_skin_color.up.sql  20230906135717_add_render_fields.down.sql  20230906135717_add_render_fields.up.sql  20231020095331_materialized_scores_view.down.sql  20231020095331_materialized_scores_view.up.sql  20240228202351_attribute_adjustments.down.sql  20240228202351_attribute_adjustments.up.sql  20240407231623_lazer_stable_toggle.down.sql  20240407231623_lazer_stable_toggle.up.sql  20240724163823_score_data.down.sql  20240724163823_score_data.up.sql  20240727204755_score_format.down.sql  20240727204755_score_format.up.sql  20241031101334_pp_update.down.sql  20241031101334_pp_update.up.sql  20241210012458_remove_scores.down.sql  20241210012458_remove_scores.up.sql  20250114084143_tracking_rework.down.sql  20250114084143_tracking_rework.up.sql  20250120223657_tracking_with_datetime.down.sql  20250120223657_tracking_with_datetime.up.sql  20250318160023_osu_file_data.down.sql  20250318160023_osu_file_data.up.sql  20250331091329_gamba.down.sql  20250331091329_gamba.up.sql
bathbot-psql/src/: database.rs  lib.rs  refresh.rs  util.rs
bathbot-psql/src/impls/: bookmarks.rs  huismetbenen_countries.rs  mod.rs  tracked_streams.rs
bathbot-psql/src/model/: mod.rs  render.rs
bathbot-server/: Cargo.toml
bathbot-server/src/: error.rs  lib.rs  main.rs  router.rs  server.rs  standby.rs  state.rs
bathbot-server/src/middleware/: metrics.rs
bathbot-server/src/routes/: guild_count.rs  metrics.rs  mod.rs  osudirect.rs
bathbot-util/: Cargo.toml
bathbot-util/src/: buckets.rs  constants.rs  cow.rs  datetime.rs  exp_backoff.rs  hasher.rs  html.rs  html_to_png.rs  lib.rs  macros.rs  matcher.rs  matrix.rs  metrics.rs  mods_fmt.rs  msg_origin.rs  numbers.rs  osu.rs  string_cmp.rs  tourney_badges.rs
bathbot-util/src/builder/: author.rs  embed.rs  footer.rs  message.rs  mod.rs  modal.rs
bathbot-util/src/ext/: authored.rs  mod.rs  score.rs
bathbot-util/src/query/: filter.rs  mod.rs  optional.rs  searchable.rs
bathbot/src/: main.rs
bathbot/src/active/: builder.rs  mod.rs  origin.rs  pagination.rs  response.rs
bathbot/src/commands/: mod.rs
bathbot/src/core/: buckets.rs  cluster.rs  config.rs  logging.rs  metrics.rs  mod.rs  stats.rs
bathbot/src/custom_client/: mod.rs  osu_tracker.rs
bathbot/src/embeds/: mod.rs
bathbot/src/manager/: bookmarks.rs  games.rs  github.rs  guild_config.rs  huismetbenen_country.rs  mod.rs  osu_map.rs  osu_scores.rs  osu_tracking.rs  (+6 more)
src/osapi/: Cargo.toml
(+1586 files in other folders)
