[workspace]
members = [
    "bathbot",
    "bathbot-cache",
    "bathbot-cards",
    "bathbot-client",
    "bathbot-macros",
    "bathbot-model",
    "bathbot-psql",
    "bathbot-server",
    "bathbot-util",
]
resolver = "2"

[workspace.package]
version = "3.17.1"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"

[workspace.dependencies]
bitflags = { version = "2.8.0" }
metrics = { version = "0.24.1" }
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
metrics-util = { version = "0.19.0" }
rkyv = { version = "0.8" }
rosu-mods = { version = "0.2.0", features = ["rkyv"] }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "main" }
# rosu-pp = { path = "../rosu-pp" }
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", default-features = false, features = ["deny_unknown_fields", "macros", "metrics"] }
# rosu-v2 = { path = "../rosu-v2", default-features = false, features = ["deny_unknown_fields", "macros", "metrics"] }
skia-safe = { version = "0.81.0" }
thiserror = { version = "2.0.11" }
twilight-gateway = { version = "0.16", default-features = false, features = ["rustls-webpki-roots", "rustls-ring", "twilight-http", "zlib-stock"] }
twilight-http = { version = "0.16", default-features = false, features = ["rustls-webpki-roots", "rustls-ring"] }
twilight-interactions = { git = "https://github.com/MaxOhn/twilight-interactions", branch = "with-help-16", default-features = false, features = ["derive"] }
twilight-model = { version = "0.16", default-features = false }
twilight-standby = { version = "0.16", default-features = false }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
