[workspace]
members = [
    "bathbot",
    "bathbot-cache",
    "bathbot-cards",
    "bathbot-client",
    "bathbot-macros",
    "bathbot-model",
    "bathbot-psql",
    "bathbot-server",
    "bathbot-util",
]
resolver = "2"

[workspace.package]
version = "3.17.4"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"

[workspace.dependencies]
bitflags = { version = "2.8.0" }
http = { version = "1.2.0" }
http-body-util = { version = "0.1.2" }
hyper = { version = "1.6.0", default-features = false }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http2", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["client", "client-legacy", "http2", "tokio"] }
metrics = { version = "0.24.1" }
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
metrics-util = { version = "0.19.0" }
rkyv = { version = "0.8" }
rosu-mods = { version = "0.2.0", features = ["rkyv"] }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "main" }
# rosu-pp = { path = "../rosu-pp" }
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", default-features = false, features = ["deny_unknown_fields", "macros", "metrics"] }
# rosu-v2 = { path = "../rosu-v2", default-features = false, features = ["deny_unknown_fields", "macros", "metrics"] }
rustls = { version = "0.23.20", default-features = false, features = ["std", "tls12"] }
skia-safe = { version = "0.81.0" }
thiserror = { version = "2.0.11" }
twilight-gateway = { version = "0.16", default-features = false, features = ["rustls-webpki-roots", "rustls-ring", "twilight-http", "zlib-stock"] }
twilight-http = { version = "0.16", default-features = false, features = ["rustls-webpki-roots", "rustls-ring"] }
twilight-interactions = { git = "https://github.com/MaxOhn/twilight-interactions", branch = "with-help-16", default-features = false, features = ["derive"] }
twilight-model = { version = "0.16", default-features = false }
twilight-standby = { version = "0.16", default-features = false }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
