[package]
name = "bathbot-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
bb8-redis = { version = "0.13.1" }
eyre = { version = "0.6" }
itoa = { version = "1.0" }
once_cell = { version = "1.0" }
rkyv = { version = "0.7" }
tracing = { version = "0.1" }
twilight-model = { workspace = true }
twilight-gateway = { workspace = true }