[package]
name = "bathbot-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
bathbot-psql = { path = "../bathbot-psql" }
bb8-redis = { version = "0.13.1", default-features = false }
eyre = { workspace = true }
redlight = { workspace = true }
rkyv = { workspace = true }
rosu-v2 = { workspace = true }
twilight-model = { workspace = true }