[package]
name = "bathbot-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
bb8-redis = { version = "0.20.0" }
eyre = { workspace = true }
itoa = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
twilight-model = { workspace = true }
twilight-gateway = { workspace = true }
