[package]
name = "bathbot-cards"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
itoa = { version = "1.0.9", default-features = false }
rosu-pp = { workspace = true }
rosu-v2 = { workspace = true }
skia-safe = { workspace = true }
thiserror = { workspace = true }
