[package]
name = "bathbot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64 = { version = "0.21" }
bathbot-model = { path = "../bathbot-model" }
bathbot-util = { path = "../bathbot-util" }
bytes = { version = "1.0" }
eyre = { version = "0.6" }
http = { version = "0.2" }
hyper = { version = "0.14", default-features = false }
hyper-rustls = { version = "0.24.1", default-features = false, features = ["http1", "tls12", "tokio-runtime", "webpki-tokio"] }
itoa = { version = "1.0.9", default-features = false }
leaky-bucket-lite = { version = "0.5", features = ["parking_lot"] }
metrics = { version = "0.23.0" }
rand = { version = "0.8" }
rosu-v2 = { workspace = true }
rkyv = { workspace =  true }
ryu = { version = "1.0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.20", default-features = false, features = ["fs", "io-util", "macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { version = "0.1" }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }

[features]
default = []
twitch = []