[package]
name = "bathbot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
bathbot-util = { path = "../bathbot-util" }
bytes = { version = "1.0" }
eyre = { version = "0.6" }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
itoa = { version = "1.0.9", default-features = false }
leaky-bucket-lite = { version = "0.5", features = ["parking_lot"] }
metrics = { workspace = true }
rand = { version = "0.8" }
rosu-v2 = { workspace = true }
rkyv = { workspace =  true }
rustls = { workspace = true }
ryu = { version = "1.0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { workspace = true }
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.20", default-features = false, features = ["fs", "io-util", "macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { version = "0.1" }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }

[features]
default = []
twitch = []