[package]
name = "bathbot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
bathbot-util = { path = "../bathbot-util" }
bytes = { workspace = true }
eyre = { workspace = true}
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
itoa = { workspace = true }
leaky-bucket-lite = { version = "0.5", features = ["parking_lot"] }
memchr = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
rosu-v2 = { workspace = true }
rkyv = { workspace =  true }
rustls = { workspace = true }
ryu = { version = "1.0.15", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }

[features]
default = []
twitch = []
