[package]
name = "bathbot-model"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-util = { path = "../bathbot-util" }
bitflags = { workspace = true }
form_urlencoded = { version = "1.2.0", default-features = false, features = ["std"] }
eyre = { workspace = true }
http = { workspace = true }
rosu-mods = { workspace = true }
rosu-v2 = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
serde_urlencoded = { version = "0.7.1", default-features = false }
time = { workspace = true, features = ["parsing"] }
twilight-gateway = { workspace = true }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }
