[package]
name = "bathbot-psql"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
eyre = { version = "0.6" }
futures = { version = "0.3", default-features = false }
ptr_meta = { version = "~0.1.3" }
rkyv = { workspace = true }
rosu-v2 = { workspace = true }
smallvec = { version = "1.10" }
sqlx = { version = "0.8.3", default-features = false, features = ["json", "macros", "postgres", "runtime-tokio-rustls", "time"] }
time = { version = "0.3" }
tokio = { version = "1.20", default-features = false, features = ["io-util", "time"] }
tracing = { version = "0.1" }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }

[dev-dependencies]
dotenvy = { version = "0.15" }
