[package]
name = "bathbot-psql"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
bathbot-util = { path = "../bathbot-util" }
eyre = { workspace = true }
futures = { version = "0.3", default-features = false }
rkyv = { workspace = true }
rosu-v2 = { workspace = true }
smallvec = { version = "1.10" }
sqlx = { version = "0.8.3", default-features = false, features = ["json", "macros", "postgres", "runtime-tokio-rustls", "time"] }
time = { version = "0.3" }
tokio = { version = "1.20", default-features = false, features = ["io-util", "time"] }
tracing = { version = "0.1" }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }

[dev-dependencies]
dotenvy = { version = "0.15" }
