[package]
name = "bathbot-psql"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bathbot-model = { path = "../bathbot-model" }
bathbot-util = { path = "../bathbot-util" }
eyre = { workspace = true }
futures = { workspace = true }
rkyv = { workspace = true }
rosu-v2 = { workspace = true }
smallvec = { workspace = true }
sqlx = { version = "0.8.3", default-features = false, features = ["json", "macros", "postgres", "runtime-tokio-rustls", "time"] }
time = { workspace = true }
tokio = { workspace = true, features = ["io-util", "time"] }
tracing = { workspace = true }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }
