[package]
name = "bathbot-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["http2", "json", "macros", "matched-path", "query", "tokio"] }
bathbot-model = { path = "../bathbot-model" }
bathbot-util = { path = "../bathbot-util" }
eyre = { workspace = true }
flexmap = { workspace = true }
futures = { workspace = true }
handlebars = { version = "6.3.0" }
hyper = { workspace = true, features = ["server"] }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rosu-v2 = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = { workspace = true }
