[package]
name = "bathbot-util"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eyre = { workspace = true }
memchr = { workspace = true }
metrics = { workspace = true }
metrics-util = { workspace = true }
regex = { version = "1.0" }
rosu-v2 = { workspace = true }
time = { version = "0.3", features = ["parsing"] }
twilight-model = { workspace = true }
