[package]
name = "bathbot-util"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eyre = { workspace = true }
memchr = { workspace = true }
metrics = { workspace = true }
metrics-util = { workspace = true }
regex = { workspace =true }
rosu-v2 = { workspace = true }
time = { workspace = true, features = ["parsing"] }
twilight-model = { workspace = true }
