[package]
name = "bathbot-twilight"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aho-corasick = { version = "1.1.1" }
bathbot-cache = { path = "../bathbot-cache" }
bathbot-cards = { path = "../bathbot-cards" }
bathbot-client = { path = "../bathbot-client" }
bathbot-macros = { path = "../bathbot-macros" }
bathbot-model = { path = "../bathbot-model" }
bathbot-psql = { path = "../bathbot-psql" }
bathbot-server = { path = "../bathbot-server", optional = true }
bathbot-util = { path = "../bathbot-util" }
bitflags = { workspace = true }
bytes = { version = "1.0" }
dotenvy = { version = "0.15" }
enterpolation = { version = "0.2", default-features = false, features = ["std", "bezier", "bspline", "linear"] }
enum_dispatch = { version = "0.3.11" }
eyre = { version = "0.6" }
flexmap = { git = "https://github.com/MaxOhn/flexmap" }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3.31" }
hashbrown = { version = "0.14" }
image = { version = "0.24", default-features = false, features = ["gif", "png"] }
leaky-bucket-lite = { version = "0.5", default-features = false, features = ["tokio"] }
linkme = { version = "0.3.15" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
nom = { version = "7.1.3" }
once_cell = { version = "1.0" }
papaya = { version = "0.1.2" }
plotters = { version = "0.3", default-features = false, features = ["ttf", "image", "line_series", "area_series", "histogram", "point_series"] }
plotters-backend = { version = "0.3" }
plotters-skia = { git = "https://github.com/MaxOhn/plotters-skia", branch = "main" }
radix_trie = { version = "0.2" }
rand = { version = "0.8" }
rkyv = { workspace = true }
rosu-pp = { workspace = true }
rosu-v2 = { workspace = true }
rosu-pp-older = { git = "https://github.com/MaxOhn/rosu-pp-older.git", branch = "main" }
# rosu-pp-older = { path = "../../rosu-pp-older" }
# rosu-render = { git = "https://github.com/MaxOhn/rosu-render", branch = "main", default-features = false, features = ["rustls-webpki-roots"] }
rosu-render = { version = "0.3.0", default-features = false, features = ["rustls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smallvec = { version = "1.0" }
skia-safe = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.20", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec", "std", "time", "tracing-log"] }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }
twilight-standby = { workspace = true }
url = { version = "2.4", default-features = false }

[features]
default = []
full = ["global_slash", "matchlive", "notify_osutrack", "server", "twitch", "twitchtracking"]

global_slash = []
matchlive = []
server = ["bathbot-server", "twitch"]
twitch = ["bathbot-client/twitch"]
twitchtracking = ["twitch"]
notify_osutrack = []
