[package]
name = "bathbot-twilight"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aho-corasick = { workspace = true }
bathbot-cache = { path = "../bathbot-cache" }
bathbot-cards = { path = "../bathbot-cards" }
bathbot-client = { path = "../bathbot-client" }
bathbot-macros = { path = "../bathbot-macros" }
bathbot-model = { path = "../bathbot-model" }
bathbot-psql = { path = "../bathbot-psql" }
bathbot-server = { path = "../bathbot-server", optional = true }
bathbot-util = { path = "../bathbot-util" }
bitflags = { workspace = true }
bytes = { workspace = true }
console-subscriber = { version = "0.4.1", optional = true }
dotenvy = { workspace = true }
enterpolation = { workspace = true }
enum_dispatch = { workspace = true }
eyre = { workspace = true }
flexmap = { workspace = true }
futures = { workspace = true }
image = { version = "0.24", default-features = false, features = ["gif", "png"] }
leaky-bucket-lite = { version = "0.5", default-features = false, features = ["tokio"] }
linkme = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
nom = { workspace = true }
papaya = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["ttf", "image", "line_series", "area_series", "histogram", "point_series"] }
plotters-backend = { version = "0.3" }
plotters-skia = { git = "https://github.com/MaxOhn/plotters-skia", branch = "main" }
radix_trie = { workspace = true }
rand = { workspace = true }
rkyv = { workspace = true }
rosu-pp = { workspace = true }
rosu-v2 = { workspace = true }
rosu-pp-older = { workspace = true }
rosu-render = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
skia-safe = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
tracing = { workspace = true }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec", "std", "time", "tracing-log"] }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-interactions = { workspace = true }
twilight-model = { workspace = true }
twilight-standby = { workspace = true }
url = { version = "2.4", default-features = false }

[features]
default = []
full = ["global_slash", "matchlive", "notify_osutrack", "server", "twitch", "twitchtracking"]

global_slash = []
matchlive = []
server = ["bathbot-server", "twitch"]
twitch = ["bathbot-client/twitch"]
twitchtracking = ["twitch"]
notify_osutrack = []
tokio_console = ["console-subscriber"]
