[package]
name = "osapi"
version = "0.1.0"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2018"

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.8"
tokio = "0.2.9"
futures = { version = "0.3.1", features = ["compat"] }
hyper = "0.13.1"
hyper-tls = "0.4.1"

[dev-dependencies]
env_logger = "0.6"
kankyo = "0.2"